--- a/index.html
+++ b/index.html
@@ -53,16 +53,14 @@
                     <h4>I'm A Coder.... ish..</h4>
                     <p>I work in the dark, slither in the countless used coffee cups, energy drink cans and effortlessly click a range of buttons on a magical instrument known as the keyboard.&nbsp;<br></p>
                 </div>
-            </div><div class="col">
-<video height="800" controls autoplay>
-  <source src="video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>    
+            </div>
+            <div class="col">
+<img  height="600" src="https://im.ezgif.com/tmp/ezgif-1-cab0d48144.gif"></img>    
 </div>
             <div class="col">
                 <div class="p-4">
                     <h4>A Tinkerer</h4>
-                    <p>I often regard my efficiency and workmanship to be on par with some of the greatest minds of human history; Issac Newton, Nikola Tesla, Elon Musk... But thanks to Mum, I;m often grounded.<br><br></p>
+                    <p>I often regard my efficiency and workmanship to be on par with some of the greatest minds of human history; Issac Newton, Nikola Tesla, Elon Musk... But thanks to Mum, I'm often grounded.<br><br></p>
                 </div>
             </div>
         </div>
@@ -106,6 +104,8 @@ justify-content: center;
   > * {
     grid-column: 1 / -1;
   }
+  .col img {
+    border-radius: 10px
 }
 
 img {
