Final Push for submission

--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <div class="row" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;">
                 <div class="col-xxl-6 text-nowrap text-center text-primary">
                     <h1 class="text-start d-inline" style="font-family: Ubuntu, sans-serif;padding-bottom: 20;">Erfan Mangani</h1>
-                    <p class="text-center border-1 justify-content-around" style="font-family: Ubuntu, sans-serif;"><br>Managed The General Workflow of project<br>Managed the construction and design of the bridge<br>Worked to construct the Bridge</p><img src="assets/img/20220731_1311531.jpg" width="316" height="470">
+                    <p class="text-center border-1 justify-content-around" style="font-family: Ubuntu, sans-serif;"><br>✅Managed The General Workflow of project<br>✅Managed the construction and design of the bridge<br>✅Worked to construct the Bridge<br>✅Did the Webpage and video editing</p><img src="assets/img/20220731_1311531.jpg" width="316" height="470">
                 </div>
                 <div class="col-md-6 col-xxl-5 text-center text-info d-inline justify-content-around">
-                    <h1 class="d-inline" style="font-family: Ubuntu, sans-serif;padding-bottom: 0px;">Khoi Duong</h1>
-                    <p class="text-center" style="font-family: Ubuntu, sans-serif;"><br>Completed all of the calculations of the bridge<br>Oversaw the design of the bridge&nbsp;<br>&nbsp;Worked to Construct the Bridge</p><img src="assets/img/20221104_105659.jpg" width="216" height="446">
+                    <h1 class="d-inline" style="font-family: Ubuntu, sans-serif;padding-bottom: 0px;">Minh Khoi Duong</h1>
+                    <p class="text-center" style="font-family: Ubuntu, sans-serif;"><br>✅Completed all of the calculations of the bridge<br>✅Oversaw the design of the bridge&nbsp;<br>✅Completed multiple sections of the written report<br>✅ Worked to Construct the Bridge<br></p><img src="assets/img/20221104_105659.jpg" width="216" height="446">
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                             <h6 class="text-muted card-subtitle mb-2">PLA&nbsp;</h6>
                             <p class="card-text" style="color: rgb(0,0,0);">The bracings of the bridge were custom designed and 3D printed using PLA material 🤖</p>
                         </div>
-                        <div class="card-footer p-4 py-3"><a href="https://www.jaycar.com.au/1-75mm-yellow-flashforge-pla-filament-1kg-roll/p/TL4269">Where we bough this material&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
+                        <div class="card-footer p-4 py-3"><a href="https://www.jaycar.com.au/1-75mm-yellow-flashforge-pla-filament-1kg-roll/p/TL4269">Where we bought this material&nbsp;<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-arrow-right">
                                     <path fill-rule="evenodd" d="M1 8a.5.5 0 0 1 .5-.5h11.793l-3.147-3.146a.5.5 0 0 1 .708-.708l4 4a.5.5 0 0 1 0 .708l-4 4a.5.5 0 0 1-.708-.708L13.293 8.5H1.5A.5.5 0 0 1 1 8z"></path>
                                 </svg></a></div>
                     </div>
@@ -253,6 +253,14 @@
             <div class="col d-xxl-flex flex-grow-0 order-md-2 justify-content-xxl-center align-items-xxl-center">
                 <div class="card"><img class="card-img w-100 d-block flex-fill" src="assets/img/20221012_185333.jpg"></div>
             </div>
+        </div>
+    </div>
+    <div class="container d-xxl-flex align-items-xxl-center">
+        <div class="row">
+            <div class="col-md-12">
+                <h1 class="text-center">Watch our awsome video 🔥💪</h1>
+            </div>
+            <div class="col d-xxl-flex justify-content-xxl-center"><iframe class="d-xxl-flex" allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/hMmVuFqTXiw" width="560" height="315" style="display: flex;"></iframe></div>
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
